--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
-    "vue": "^2.5.11"
+    "vue": "^2.5.11",
+    "vuetify": "^2.0.1"
   },
   "browserslist": [
     "> 1%",
