--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "vue": "^2.5.11",
+    "vue-router": "^3.0.7",
     "vuetify": "^2.0.1"
   },
   "browserslist": [
